Rename to match breakpoint.

--- a/app/our-work.html
+++ b/app/our-work.html
@@ -94,7 +94,7 @@ layout: default
     {% endfor %}
   </section>
 
-  <section class="bg-yellow pt-24 md:pt-80 pb-[theme(footerPadding.sm)] md:pb-[theme(footerPadding.lg)] ">
+  <section class="bg-yellow pt-24 md:pt-80 pb-[theme(footerPadding.sm)] md:pb-[theme(footerPadding.md)] ">
     <div class="container flex flex-col gap-40">
       <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
         <h2 class="h2">Past Projects</h2>
