Refactor supports logo display; align in columns.

--- a/app/about/index.html
+++ b/app/about/index.html
@@ -12,7 +12,7 @@ layout: default
   </div>
 </section>
 
-<div class="flex flex-col items-start gap-40 md:gap-80">
+<div class="flex flex-col items-start gap-48 md:gap-84">
 
   <section class="container">
     <div class="flex flex-col md:grid md:grid-cols-3 gap-28 md:gap-40">
@@ -110,16 +110,12 @@ layout: default
     </section>
   </section>
 
-  <section class="container flex flex-col gap-80 md:gap-160">
-    <div class="flex flex-col md:grid md:grid-cols-3 gap-24 md:gap-40">
-      <h2 class="h2">Supported By</h2>
-    </div>
-    <div class="flex flex-wrap gap-x-[10vw] gap-y-100 items-center justify-center max-w-[500px] mx-auto">
-      <img src="/assets/images/harvard-law-school-logo.png" alt="Harvard Law School Logo" />
-      <img src="/assets/images/ffdw-logo.png" alt="Filecoin Foundation for the Decentralized Web Logo" />
-      <img src="/assets/images/lexisnexis-logo.png" alt="LexisNexis Logo" />
-      <img src="/assets/images/openai-logo.png" alt="OpenAI Logo" />
-      <img src="/assets/images/meta-logo.png" alt="Meta Logo" />
+  <section class="container">
+    <h2 class="h2 mb-48 tbl:mb-36 md:mb-84">Supported By</h2>
+    <div class="flex flex-wrap flex-col tbl:grid tbl:grid-cols-2 xl:grid-cols-3 gap-y-24 sm:gap-y-36 tbl:gap-y-18 md:gap-y-36 lg:gap-y-48 items-center justify-center">
+      {% for supporter in site.data.supporters %}
+        <div class="tbl:m-auto"><img class="max-w-[50vw] sm:max-w-auto" src="/assets/images/{{ supporter.logo }}" alt="{{ supporter.name }} Logo" /></div>
+      {% endfor %}
     </div>
   </section>
 
